--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -2,7 +2,7 @@
 
 \newif\ifpaperonly
 \paperonlyfalse
-%%\paperonlytrue
+%\paperonlytrue
 
 \documentclass[
   draft,
@@ -30,7 +30,7 @@
 
 \begin{document}
 
-\include{titel}
+%% \include{titel}
 
 \pagenumbering{roman}
 
@@ -50,8 +50,8 @@
 %% \cleardoublepage
 %% \include{summary}
 
-\cleardoublepage
-\include{appendix}
+%% \cleardoublepage
+%% \include{appendix}
 
 \cleardoublepage
 \include{bibliography}
