--- a/settings.tex
+++ b/settings.tex
@@ -77,3 +77,6 @@
   \renewcommand{\todoline}[1]{}
   \renewcommand{\todo}[1]{}
 }
+
+\newcommand{\qqquad}[0]{\qquad\quad}
+\newcommand{\pot}[1]{\texttt{#1}}
