--- a/multilayer.tex
+++ b/multilayer.tex
@@ -1,38 +1,39 @@
 \section{Multilagen-PVD}
 \label{multilayer}
 
-\todoline{LAMMPS und Parsivald von einander abheben: Parsivald nutzt auch LAMMPS, LAMMPS steht nachfolgend für reine MD-Simulationen}
+Zur Herstellung von mehrlagigen Schichten wie röntgenoptischen oder magnetischen Systemen (Riesenmagnetowiderstand GMR, Tunnelmagnetowiderstand TMR) werden Elektrodepositionen\cite{yang_pulsed_1995} und Sputter-Prozesse\cite{basrhilia_characterization_2002,cammarata_nanoindentation_1990} genutzt, die beide zur Klasse der PVD-Methoden gehören.
+Mit Parsivald werden deshalb Abscheidungssimulation von Kupfer-Nickel-Multilagen durchgeführt, bevor die Ergebnisse mit den Ergebnissen von rein molekulardynamischen Rechnungen verglichen werden.
 
-Mit PVD-Methoden können auch mehrlagige Schichten abgeschieden werden, wie sie für röntgenoptische oder magnetische Systeme (Riesenmagnetowiderstand GMR, Tunnelmagnetowiderstand) interessant sind.
-Im folgenden Abschnitt soll am Beispiel von dünnen \ce{Cu-Ni}-Multilagen ein System näher untersucht werden, welches zwar einen GMR-Effekt zeigt, aber in der Praxis von \ce{Cu-Co}-Systemen aufgrund des stärkeren GMR-Effektes abgelöst wurde\cite{bird_giant_1995}.
-Das Kupfer-Nickel-System wurde aufgrund ähnlicher Gitterkonstanten gewählt (\ce{Ni}:~\SI{3.52}{\angstrom}, \ce{Cu}:~\SI{3.61}{\angstrom}), die epitaktisches Wachstum ermöglichen und somit Fehlstellen unterbinden.
-Durch die Ähnlichkeit zur Kupfer-PVD lässt sich der Prozess zudem auf den dort entwickelten Prozessparametern und den untersuchten Potentialparametersätzen aufbauen.
+Die Wahl fiel auf das Kupfer-Nickel-System aufgrund der gleichen fcc-Struktur und der ähnlichen Gitterkonstanten von \SI{3.615}{\angstrom} für Kupfer und \SI{3.5238}{\angstrom} für Nickel, wodurch Gitterdefekte vermieden werden und epitaktisches Wachstum möglich ist\cite{zhou_atomistic_1998}.
+In MD-Simulationen von \textsc{Zhou et al.}\cite{zhou_atomistic_1998} wurden bereits Gitterdefekte und -versetzungen für Lagen von je \SI{20}{\angstrom} Dicke untersucht, doch wurde während dieser Simulationen keine Amorphisierung der Schichten beobachtet.
+In dieser und weiteren Untersuchungen\cite{zhou_atomic_2001} wurden erfolgreich EAM-Potentiale benutzt, um dünne Multilagen-Systeme zu simulieren.
+Dabei bildeten sich in der Simulation klar abgetrennte Lagen aus, die nur bei hoher Energie des auftreffenden Teilchens zu einer Durchmischung des Systemes führen\cite{zhou_atomistic_1998}.
 
-Im Experiment werden mehrlagige Kupfer-Nickel-Schichten per Elektro\-deposition\cite{yang_pulsed_1995} oder durch Sputtern\cite{cammarata_nanoindentation_1990} hergestellt, wobei üblicherweise Lagendicken im Bereich mehrerer Nanometer erzielt werden.
-Dieses Vorgehen lässt sich direkt in Parsivald-Simulationen übertragen, in denen zugunsten der Rechenzeit in den folgenden Untersuchungen vergleichsweise dünne Lagen mit einer Dicke von \SI{1}{\nano\meter} abgeschieden wurden.
-Anschließend werden diese auf Ähnlichkeit mit LAMMPS-präparierten Multilagen hinsichtlich ihrer Lagendicke und -rauheit untersucht.
-Eine Auswertung der relativen Verteilung der Spezies entlang der Abscheidungsrichtung wird ergänzend für verschiedene Relaxationszeiten als Maß der Lagenqualität durchgeführt.
-Abscheidungen von Lagen mit einer Dicke von \SI{6}{\nano\meter} wurden ebenfalls mit Parsivald simuliert, doch mangels verfügbarer Rechenzeit für vergleichbare reine LAMMPS-Simulationen nicht eingehender untersucht.
+Experimentelle Untersuchungen von \ce{Cu-Ni}-Multilagen zeigen für Sputter-Prozesse Doppel\-lagen-Dicken von \SIrange{1.6}{12}{\nano\meter}\cite{cammarata_nanoindentation_1990} und \SI{160}{\nano\meter} für Elektrodepositions-Prozesse\cite{yang_pulsed_1995}.
+Eine Untersuchung der Oberfläche für gesputterte Schichten mit einer Dicke von \SI{1.5}{\micro\meter} bei Doppellagen-Dicken von \SIrange{51}{117}{\angstrom} ergab Unebenheiten an der Oberfläche mit einer Tiefe von \SIrange{30}{40}{\nano\meter}\cite{barshilia_characterization_2002}.
+Damit sind die experimentellen Lagen häufig dicker als die mit Parsivald simulierten Doppellagen-Dicken von \SI{2}{\nano\meter}, allerdings beschränken sich die Untersuchungen häufig auf mechanische, magnetische oder elektronische Eigenschaften, sodass kein direkter Vergleich mit strukturellen Daten möglich ist.
+Da dickere Lagen zudem mit einer Rechenzeit von mehreren Wochen einher gehen, waren sie aufgrund der Notwendigkeit mehrerer Anpassungszyklen der Abscheidungssimulation im zeitlichen Rahmen dieser Arbeit nicht durchführbar.
+Stattdessen werden die Ergebnisse mit denen anderer MD-Rechnungen verglichen.
+Sofern die MD-Rechnungen mit dem benutzten EAM-Parametersatz das Zielsystem hinreichend beschreiben und eine Übereinstimmung mit der Parsivald-Simulation vorliegt, sollten auch größere Systeme effizient simuliert werden können.
 
-Wie bei den Gold-PVD-Simulation zuvor müssen für erfolgreiche Simulationen einige Simulationsparameter wie Relaxationszeit, Thermostatdämpfung und Substrattemperatur optimiert werden.
-Als Zielgrößen für die Optimierung wurden zur Vermeidung von Fehlstellen die Rauheit der Oberfläche und die Qualität der einzelnen Lagen im Vergleich mit ähnlichen Untersuchungen\cite{zhou_atomistic_1998} gewählt.
-In diesen Untersuchungen wurde bereits gezeigt, dass die kinetische Energie der einfallenden Atome einen erheblichen Einfluss auf die Qualität der einzelnen Lagen hat, weshalb gleichartige Untersuchungen nur hinsichtlich der Substrattemperatur durchgeführt wurden.
+\subsection{Multilagen-Simulationen mit Parsivald}
 
-\subsection{Ergebnisse}
+Für die Parsivald-Simulation wurde auf einen neuen EAM-Parametersatz für Kupfer-Nickel-Legierungen zurück gegriffen\cite{onat_optimized_2014}, der dem LAMMPS-Paket erst seit Kurzem beigelegt ist und deshalb noch nicht bei den Untersuchungen von Kupfer-Parametrisierungen in Abschnitt~\ref{copperpvd} betrachtet wurde.
+Die weiteren Simulationsparameter wurden direkt von der Kupfer-PVD-Simu\-la\-tion übernommen, wobei die Relaxationszeiten für die MD-Rechnungen variiert wurden, um ihren Einfluss auf die Durchmischung der Schichten zu untersuchen.
+Die Auftreffenergien der Atome wurden mit \SI{4.2}{\electronvolt} im unteren Bereich der Werte aus Referenz~\cite{zhou_atomistic_1998} gewählt, um das Herausschlagen von Oberflächenatomen zu vermeiden.
+Die PVD-Raten wurden so gewählt, dass einzelne Lagen mit einer Dicke von \SI{1}{\nano\meter} erzeugt werden.
+Abscheidungen von Lagen mit einer Dicke von \SI{5}{\nano\meter} wurden ebenfalls mit Parsivald simuliert, doch mangels verfügbarer Rechenzeit nicht eingehender untersucht.
+Anhang~\ref{appendix_multilayer} enthält neben diesen Systemen auch Darstellungen von strukturellen Fehlern, die bei der Fehleinstellung der Simulationsparameter von der Simulation verursacht werden können.
 
-Parsivald-Simulationen erzeugen nach korrekter Parametereinstellung klar abgegrenzte epitaktische Atomlagen geringer Rauheit, die sich gut mit den Ergebnissen gleichartiger LAMMPS-Simulationen decken (Abbildung~\ref{fig:multilayerresults}).
-RMS-Rauheiten um \SI{1.2}{\angstrom} stellen sich mit beiden Simulationsmethoden bis zur zehnten Lage ein und stimmen somit untereinander und mit den bisherigen Ergebnissen überein (Abbildung~\ref{fig:multilayerplots-a}).
-Anhand der Schichten ist eine schwach korrelierte Rauheit der einzelnen Lagen erkennbar.
+Eine Untersuchung der Ergebnisse der Parsivald-Simulationen zeigt nach korrekter Parametereinstellung \todo{Joerg: hier sollte man vielleicht irgendwo mal erwähnen, dass man das für dieses System erwartet? Eigentlich müsste man da was zu Mischbarkeit und Phasendiagramm der Legierungsbildung sagen ...}klar abgegrenzte epitaktische Atomlagen (Abbildungen~\ref{fig:multilayerresults}), die eine geringe Rauheit von \SI{1.2}{\angstrom} zeigen (Abbildung~\ref{fig:multilayerplots-a}), welche unterhalb der Bindungslängen liegt.
+Bei Untersuchungen der Alpha-Form konnten weder Poren noch Hohlräume gefunden werden.
+Die Lagen zeigen jedoch bei geringeren Relaxationszeiten eine stärkere Durchmischung, wie man in Abbildung~\ref{fig:multilayerplots-b} anhand der nach Schichthöhe aufgelösten Atomkonzentration erkennen kann.
+In der Simulation wird die Durchmischung durch eine Unterrelaxation verursacht, bei der sich das auftreffende Atom nicht weit genug auf der Oberfläche bewegen kann, um einen günstigen Ablagerungsort zu erreichen.
+Stattdessen verbleibt es in direkter Nähe zum möglicherweise ungünstigen Auftreffort, wodurch sich Unebenheiten verstärken können und somit die Durchmischung erhöht.
+Ähnliche Effekte wurden von \textsc{Zhou et al.}\cite{zhou_atomistic_1998} bereits für niedrige Auftreffenergien beobachtet.
+Für Systeme, die zu einer stärkeren Durchmischung neigen, sollten längere Relaxationszeiten diese zusätzlich befördern.
 
-Zuvor war eine Anpassung der Temperaturen und Relaxationszeiten notwendig, die jedoch für LAMMPS und Parsivald gleichermaßen gelten.
-Als Richtwert wurde die Qualität der einzelnen Lagen in Form des Anteils der Spezies in Abhängigkeit der Höhe über dem Substrat genutzt (Abbildung~\ref{fig:multilayerplots-b}).
-Lagen schlechterer Qualität zeigen eine höhere Durchmischung der Schichten\todo{Joerg: was aber auch korrekt sein kann, je nach Mischbarkeit}, was wiederum zu einer Senkung der relativen Häufigkeit einer Spezies innerhalb ihrer Schicht führt, wie für die beiden Verteilungen bei einer Relaxationszeit von \SI{0.2}{\femto\second} pro Ereignis beobachtet werden kann.
-Erst bei Verdopplung der Relaxationszeit bilden sich \todo{Joerg: hier sollte man vielleicht irgendwo mal erwähnen, dass man das für dieses System erwartet? Eigentlich müsste man da was zu Mischbarkeit und Phasendiagramm der Legierungsbildung sagen ...}klar abgegrenzte Lagen aus, wie sie in Abbildung~\ref{fig:multilayerresults} dargestellt sind.
-
-In Anhang~\ref{appendix:multilayer} ist eine Auswahl von mehrlagigen Kupfer-Nickel-Schichten dargestellt, die durch Unterrelaxation verursachte strukturelle Fehler aufweisen.
-Bei größeren Systemen ist zudem mit dem Auftreten von Verspannungen aufgrund der leicht unterschiedlichen Bindungslängen sowie mit der Entstehung von Gitterversetzungen und Fehlstellen zu rechnen, die allerdings durch Finite-Size-Effekte unterdrückt sein können.
-
-\begin{figure}
+\begin{figure}[bp]
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{7cm}
   \begin{subfigure}[t]{\subfigwidth}
@@ -52,25 +53,43 @@ Bei größeren Systemen ist zudem mit dem Auftreten von Verspannungen aufgrund d
     Rauheit und Qualität von Kupfer-Nickel-Multilagen
   }
   \label{fig:multilayerplots}
-\todoline{Joerg: etwas mehr Luft zwischen Kurven und Legende wäre hübsch}
 \end{figure}
 
-\begin{figure}
+\subsection{Vergleich mit Ergebnissen reiner MD-Simulationen}
+
+Zur Erzeugung von Vergleichsstrukturen wurden reine MD-Simulationen mit LAMMPS durchgeführt, welches auch von Parsivald für MD-Rechnungen als Laufzeit-Bibliothek eingebunden wird.
+Dabei wurde die Größe des Substrates beibehalten und während der Simulation Atome vom oberen Rand des Simulationsraumes auf die Oberfläche aufgebracht, wofür die PVD-Raten zugunsten der Rechenzeit um mehrere Größenordnungen höher als bei Parsivald-Rechnungen gewählt werden mussten.
+Dadurch sind gegenseitige Einflüsse zwischen benachbarten Abscheidungsorten nicht ausgeschlossen und können die Filmqualität durch Bildung von Nanopartikeln potentiell verringern.
+Im Gegensatz zu Parsivald wird bei den reinen LAMMPS-Rechnungen der komplette Simulationsraum simultan berechnet, wodurch auch langreichweitige Effekte ermöglicht werden.
+
+Beim Vergleich der Ergebnisse von Parsivald und LAMMPS zeigt sich jedoch eine gute Übereinstimmung der Schichten (Abbildung~\ref{fig:multilayerresults}), die auch in den Rauheiten erkennbar ist (Abbildung~\ref{fig:multilayerplots-a}).
+Sowohl die Ergebnisse der Abscheidungssimulationen mit Parsivald als auch die der LAMMPS-Rechnungen weisen Rauheiten unterhalb der Bindungslängen auf und zeigen weder Hohlräume noch Gitterdefekte.
+Bei den LAMMPS-Simulationen wurde eine leicht verringerte Zahl von Atomen pro Zyklus aufgeschieden, woraus sich ca. \SI{6}{\percent} dünnere Schichten ergeben.
+
+\begin{figure}[tp]
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{7cm}
   \begin{subfigure}[t]{\subfigwidth}
-    \includegraphics[width=\textwidth]{CuNi_profile_LAMMPS_nice}
+    \includegraphics[width=\textwidth]{CuNi_LAMMPS_45}
     \subcaption{Profil von \ce{Cu-Ni}-Multilagen, reine MD-Simulation mit LAMMPS}
   \end{subfigure}
   \hfill
   \begin{subfigure}[t]{\subfigwidth}
-    \includegraphics[width=\textwidth]{CuNi_profile_Parsivald}
+    \includegraphics[width=\textwidth]{CuNi_23abit_57_profile}
     \subcaption{Profil von \ce{Cu-Ni}-Multilagen mit Parsivald}
   \end{subfigure}
   \caption{Vergleich von Multilagen-Profilen mit LAMMPS und Parsivald}
   \label{fig:multilayerresults}
-\todoline{Joerg: Es wäre sinnvoll gewesen, identische Systeme zu rechnen ...}
 \end{figure}
 
-\todoline{Joerg: Fazit der schönen Ergebnisse (Übereinstimmung LAMMPS und Parsivald)}
-\todoline{Laufzeiten usw. schnell vergleichen}
+\subsection{Vergleich der Parallelisierbarkeit}
+
+Mit beiden Programmen konnte eine Laufzeit von \SI{3.5}{d} für 14 Lagen auf Substraten mit einer Fläche von \SI{106x106}{\angstrom} erzielt werden, wobei der Unterschied in der Zahl der parallelen Prozesse lag.
+Während LAMMPS einen kompletten Knoten mit 48 Prozessen ausgelastet hat, liefen die Parsivald-Simulationen mit $p = 4.18$ Prozessen, von denen der Hauptprozess zu weniger als \SI{2}{\percent} ausgelastet war.
+Damit erreicht Parsivald  für das untersuchte System eine Leistungssteigerung gegenüber reinen LAMMPS-Simulationen um einen Faktor von \num{14}, der für $w_\text{sim} < w_\text{eff}$ sogar quadratisch mit der Breite $w_\text{sim}$ des quadratischen Simulationsraumes zunimmt.
+
+\subsection{Fazit}
+
+Parsivald ermöglicht die effiziente Simulation komplizierter Abscheidungsprozesse wie Multi\-lagen-Abscheidungen mit der gleichen Aussagekraft wie reine MD-Simulationen, benötigt dafür aber weniger als \SI{10}{\percent} der Rechenkapazitäten.
+Die Ergebnisse für das epitaktische Wachstum von Kupfer-Nickel-Multilagen mit einer Dicke von je \SI{1}{\nano\meter} stimmen dabei für beide Methoden in Schichtqualität und Rauheit gut überein.
+\todoline{zdistribution für LAMMPS}
